--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -25,7 +25,7 @@ spring:
 
 springdoc:
   swagger-ui:
-    path: ${SWAGGER_UI_ADDRESS}
+    path: ${SWAGGER_UI_PATH}
     urls[0]:
       name: devops_main
-      url: ${MAIN_SWAGGER_URL}
+      url: ${MAIN_SWAGGER_PATH}
