fix: remove allowedOrigins

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -6,7 +6,7 @@ spring:
       globalcors:
         cors-configurations:
           '[/**]':
-            allowedOrigins: # 모든 도메인 허용
+            allowedOriginPatterns: # 모든 도메인 허용
               - "*"
             allowedMethods:
               - GET
