--- a/src/main/resources/application-prd.yml
+++ b/src/main/resources/application-prd.yml
@@ -11,6 +11,10 @@ spring:
             allowedMethods:
               - GET
               - POST
+              - PUT
+              - DELETE
+              - PATCH
+              - OPTIONS
             allowedHeaders: "*"
             allowCredentials: true
       routes:
