--- a/src/main/resources/application-prd.yml
+++ b/src/main/resources/application-prd.yml
@@ -6,8 +6,8 @@ spring:
       globalcors:
         cors-configurations:
           '[/**]':
-            allowedOriginPatterns: # 모든 도메인 허용
-              - "*"
+            allowedOrigins: # 모든 도메인 허용
+              - ${DOMAIN_URL}
             allowedMethods:
               - GET
               - POST
