--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,6 +3,8 @@ spring:
     name: devops-api-gateway
   cloud:
     gateway:
+      default-filters:
+        - DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials
       globalcors:
         cors-configurations:
           '[/**]':
@@ -17,15 +19,27 @@ spring:
               - ${API_GATEWAY_URL7}
               - ${API_GATEWAY_URL8}
               - ${API_GATEWAY_URL9}
+            allow-credentials: true
+            allowedHeaders:
+              - x-requested-with
+              - Authorization
+              - content-type
+              - credential
+              - X-AUTH-TOKEN
+              - X-CSRF-TOKEN  # 허용할 요청 헤더를 설정합니다.
+            exposedHeaders:
+              - x-requested-with
+              - Authorization
+              - content-type
+              - credential
+              - X-AUTH-TOKEN
+              - X-CSRF-TOKEN
             allowedMethods:
+              - PUT
               - GET
               - POST
-              - PUT
               - DELETE
-              - PATCH
               - OPTIONS
-            allowedHeaders: "*"
-            allowCredentials: true
       routes:
         - id: hello-route-non-auth
           uri: ${MAIN_ROUTE_ADDRESS}
