feat: add api-docs routes

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -41,6 +41,10 @@ spring:
               - DELETE
               - OPTIONS
       routes:
+        - id: main-swagger-api-docs
+          uri: ${MAIN_ROUTE_ADDRESS}
+          predicates:
+            - Path=/devops-main/v3/api-docs
         - id: hello-route-non-auth
           uri: ${MAIN_ROUTE_ADDRESS}
           predicates:
